[CSS] update css for company cards classes, set text overflow for all and set fix height for card

--- a/Platform/styles.css
+++ b/Platform/styles.css
@@ -917,7 +917,8 @@ body {
   width: 26%;
   min-width: 26%;
   max-width: 40%;
-  height: 75%; /* Set height to 50% of the viewport height */
+  min-height: 75%;
+  max-height: 75%;
   padding: 20px;
   gap: 0px;
   border-radius: 30px;
@@ -1046,6 +1047,7 @@ body {
   line-height: 30px;
   text-align: left;
   color: #000000;
+  white-space: nowrap; overflow: hidden;text-overflow: ellipsis;
 }
 
 .card_content_AIRecommend {
@@ -1055,11 +1057,7 @@ body {
   text-align: left;
   color: #000000;
   padding-right: 30px;
-  width: 95%;
-  display: -webkit-box;
-  -webkit-line-clamp: 2; /* Show 2 lines */
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+  white-space: nowrap; overflow: hidden;text-overflow: ellipsis;
 }
 
 .card_technology {
@@ -1108,6 +1106,7 @@ body {
   text-align: left;
   color: #2962ff;
   margin-top: 8px;
+  white-space: nowrap; overflow: hidden;text-overflow: ellipsis;
 }
 
 .contact_spaceright {
